--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -18,6 +18,12 @@
 @import "bootstrap";
 @import "font-awesome";
 
+
+body {
+ 	background: url(<%= asset_path 'bg.jpg' %>) no-repeat center center fixed;
+ 	background-size: cover;
+ }
+
 .index-product-pics {
 	height: 100px;
 }
@@ -29,15 +35,13 @@ font-family: 'BioRhyme', serif;
 
 
 .well {
+	 background-color: rgba(245, 245, 245, 0.7);
 	height: 300px;
 }
 
 .center-it {
 	text-align: center;
 }
-
-
-
 
 
 
