--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -17,4 +17,22 @@
 	<p>No order found.</p>
 	<p>You hit refresh, didn't you?</p>
 <% end %>
+<div>
+	<%= form_tag order_complete_path do %>
+		<article>
+			<label class="amount">
+				<span><%= number_to_currency @order.grand_total %></span>
+			</label>
+		</article>
+		<div>
+			<%= hidden_field_tag :order_id, @order.id %>
+		</div>
+
+		<script src="http://checkout.stripe.com/checkout.js"
+		class="stripe-button"
+		data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+		data-description="Order #<%= @order.id %>"
+		data-amount="<%= (@order.grand_total.to_f.round(2) * 100) %>"></script>
+	<% end %>
+</div>
 </body>
