--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,9 @@
 
 <body class="bioRhyme">
-
-<div class="row">
-  <div class="col-md-4">
+<div class="well center-it">
+  <div class="row">
+    <div class="col-md-4">
+    
     <p>
       <%= image_tag @product.image.url, width: "500", alt: @product.name, class: "img-responsive" %>
     </p>
@@ -43,7 +44,7 @@
   </p>
 <% end %>
 
-
+</div>
 
 
 
