--- a/app/views/storefront/all_items.html.erb
+++ b/app/views/storefront/all_items.html.erb
@@ -1,6 +1,6 @@
 <body class="bioRhyme">
 <h1>Welcome to The Store!</h1>
-<p>Let us help you spend that <strong>Money!</strong></p>
+<h3>Let us help you spend that <strong>Money!</strong></h3>
 
 <%= render 'productloop' %>
 
